--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 <body style="background-color:yellow">
 	<!-- the entire body must be written by student -->
 	<div id="f1" style="text-align:center">
-		<h1 ud="f1">Flowers photos.</h1>
+		<h1 id="f1">Flowers photos.</h1>
 		<p>Information abot flowers.</p>
 	</div>
-	<div style="text-align:center" id="f2">
-		<h1>Roses Pictures</h1>
+	<div style="text-align:center">
+		<h1  id="f2">Roses Pictures</h1>
 		<p>Information abot flower.</p>
 	</div>
     <script type="text/javascript" src="./script.js">
